--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.4",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
+    "firebase-admin": "^5.11.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.3"
   },
